--- a/assets/css/layouts.css
+++ b/assets/css/layouts.css
@@ -1731,7 +1731,7 @@
 
     #main > section.one {
       background-color: #81918E;
-      background-image: url("../../images/banner.jpg");
+      background-image: url("../../images/mountains-banner.jpg");
     }
 
     #main > section.two {
