--- a/assets/css/modules.css
+++ b/assets/css/modules.css
@@ -11,14 +11,12 @@
   }
 
   .image.avatar48 {
-    width: 48px;
-    height: 48px;
-    background: #f00;
+    height: 100%;
+    background: #ffffff;
   }
 
     .image.avatar48 img {
-      width: 48px;
-      height: 48px;
+      height: 100%;
     }
 
   .image.fit {
